Fixe design misalignments, started competences descriptions.

--- a/style/design.css
+++ b/style/design.css
@@ -430,7 +430,7 @@ body
 	font-size: 12px;
 	color: #9877dc;
 	text-decoration: none;
-	margin: 5px;
+	margin-right: 5px;
 	
 }
 
@@ -445,7 +445,7 @@ body
 {
 	font-size: 12px;
 	color: #aaaaaa;
-	margin: 5px;
+	margin-right: 5px;
 	
 }
 
